# msa-auth

./: pyproject.toml
src/: main.py
src/connections/: __init__.py  database.py
src/routes/: __init__.py  users.py
src/schemas/: users.py
src/services/: __init__.py  jwt_service.py  user_service.py
src/settings/: __init__.py  settings.py
src/utils/: __init__.py  path.py
