[tool.poetry]
name = "cloud-auth"
version = "0.1.0"
description = ""
authors = ["Wonyeong Choi <coma01155@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
